<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android" android:background="@color/bgcolor">
     <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout5" android:layout_width="match_parent" android:background="@drawable/lnew_tophead">
        <TextView android:id="@+id/textView6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:gravity="center" android:layout_gravity="center_vertical" android:textColor="@color/white" android:textSize="16dip" android:text="@string/search"></TextView>
    </LinearLayout>
      
    <LinearLayout android:id="@+id/linearLayout10" android:layout_width="fill_parent" android:layout_height="48dip" android:background="@drawable/lnew_tophead1">
        <EditText android:id="@+id/editSearchText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" android:textColor="@color/black" android:textSize="15dip" android:background="@drawable/lnew_searchinput_01" android:layout_marginLeft="5dip" android:layout_gravity="center_vertical"></EditText>
          <ImageView android:layout_height="wrap_content" android:id="@+id/searchButton" android:layout_width="wrap_content" android:src="@drawable/lnew_searchinput_02" android:layout_gravity="center_vertical"></ImageView>
   
     </LinearLayout>
      <LinearLayout android:id="@+id/linearLayout6" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1">
         
     	     <ListView android:layout_width="fill_parent"
		android:id="@+id/listView"   android:layout_height="fill_parent"></ListView>
         
      </LinearLayout>
 <LinearLayout android:id="@+id/linearLayout0" android:layout_width="fill_parent" android:background="@drawable/lnew_buttombj" android:layout_height="wrap_content" android:layout_gravity="bottom">
           <LinearLayout android:id="@+id/linearLayout1"  android:layout_width="80dip" android:orientation="vertical" android:layout_height="wrap_content">
               <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView1" android:layout_gravity="center_horizontal" android:src="@drawable/lnew_meaunosel1"></ImageView>
              <TextView android:id="@+id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tuijian" android:layout_gravity="center_horizontal" android:layout_marginTop="-15dip" android:textSize="15dip" android:textColor="@color/white"></TextView>
           </LinearLayout>
         <LinearLayout android:id="@+id/linearLayout2"  android:layout_width="80dip" android:orientation="vertical" android:layout_height="wrap_content">
               <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView2" android:layout_gravity="center_horizontal" android:src="@drawable/lnew_meaunosel2"></ImageView>
              <TextView android:id="@+id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textColor="@color/white" android:layout_marginTop="-15dip" android:textSize="15dip" android:text="@string/type"></TextView>
           </LinearLayout>
            <LinearLayout android:id="@+id/linearLayout3"  android:layout_width="80dip" android:orientation="vertical" android:layout_height="wrap_content">
               <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView3" android:layout_gravity="center_horizontal" android:src="@drawable/lnew_meaunosel3"></ImageView>
              <TextView android:id="@+id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:textColor="@color/white" android:layout_marginTop="-15dip" android:textSize="15dip" android:text="@string/top"></TextView>
           </LinearLayout>
            <LinearLayout android:id="@+id/linearLayout4"  android:layout_width="80dip" android:orientation="vertical" android:layout_height="wrap_content">
               <ImageView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/imageView4" android:layout_gravity="center_horizontal" android:src="@drawable/lnew_meausel4"></ImageView>
              <TextView android:id="@+id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:text="@string/search" android:layout_marginTop="-15dip" android:textSize="15dip" android:textColor="@color/noselcolor"></TextView>
           </LinearLayout>
    </LinearLayout>
</LinearLayout>
